# pwv-with-multi-version-objects

./: .gitignore  README.md  main.py  pyproject.toml  pytest.ini
benchmark/: README.md  bench_constants.py  bench_log.py  bench_paths.py  config.py  executor.py  main.py  preparer.py  reporter.py  run_benchmark.py  runner.py
src/mvo_compiler/: mvo_compiler.py  pipeline.py  scanner.py  transformer.py
src/mvo_compiler/builder/: components.py  constructor_generator.py  skeleton_generator.py  skelton_generator.py  stub_method_generator.py  top_level_method_transformer.py  unified_class_builder.py
src/mvo_compiler/symbol_table/: class_info.py  method_info.py  symbol_table.py  symbol_table_builder.py
src/mvo_compiler/templates/: constructor_template.py  getter_template.py  required_imports_template.py  setter_template.py  switch_to_version_template.py
src/mvo_compiler/util/: ast_util.py  builder_util.py  constants.py  logger.py  template_util.py
src/mylang_compiler/: my_lang_transformer.py  run.py  scanner.py
src/mylang_compiler/builder/: class_attribute_generator.py  constructor_generator.py  member_merger.py  self_rewrite_visitor.py  skelton_generator.py  state_infrastructure_generator.py  stub_method_generator.py  top_level_method_transformer.py  unified_class_builder.py
src/mylang_compiler/symbol_table/: class_info.py  field_info.py  method_info.py  symbol_table.py  symbol_table_builder.py  symbol_table_builder_visitor.py
src/mylang_compiler/util/: ast_util.py  (+4 more)
test/: conftest.py  create_test.py  test_create.py  test_transformer.py
test/util/: logger.py
(+158 files in other folders)
